# launchd-ui

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.ts
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  launchctl.rs  lib.rs  main.rs  plist_util.rs  process_stats.rs  types.rs
src/__tests__/: calendar-utils.test.ts
src/components/: JobDetail.tsx  JobForm.tsx  JobList.test.tsx  JobList.tsx  JobRow.tsx  LogViewer.tsx  ResourceMonitor.test.tsx  ResourceMonitor.tsx  SearchBar.tsx
src/hooks/: useJobs.test.ts  useJobs.ts  useLogs.ts  useProcessStats.test.ts  useProcessStats.ts
src/lib/: calendar-utils.ts  invoke.ts
src/test-utils/: tauri-mock.ts
